--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "awesome-phonenumber": "^2.48.0",
     "axios": "^0.21.1",
     "brainly-scraper": "^1.0.3",
-    "browser-id3-writer": "^4.4.0",
     "cfonts": "^2.9.0",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
+    "discord-canvas": "^1.4.1",
     "dotenv": "^8.2.0",
     "emoji-api": "^1.0.2",
     "fb-video-downloader": "^1.0.3",
@@ -28,10 +28,8 @@
     "hxz-api": "^1.0.1",
     "image-to-base64": "^2.2.0",
     "imgbb-uploader": "^1.3.3",
-    "indonesia": "0.0.3",
     "insta-fetcher": "^1.2.3",
     "jsdom": "^16.5.2",
-    "minecraft-server-util": "^3.6.0",
     "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
     "os": "^0.1.1",
@@ -43,7 +41,7 @@
     "request": "^2.88.2",
     "scraper-instagram": "^1.0.17",
     "spinnies": "^0.5.1",
-    "stream": "^0.0.2",
+    "swiftcord": "^2.1.7",
     "tiktok-scraper-without-watermark": "^1.0.6",
     "twitter-url-direct": "^1.0.1",
     "yargs": "^17.1.0",
